tests/snapshots/k0100_diagnostics/k0100_diagnostics_snapshot_checks__k0100_obligation_not_finished_diagnostic.snap
---
source: bin/kobo-cli/tests/k0100_diagnostics_snapshot_checks.rs
assertion_line: 37
expression: "serde_json::to_string_pretty(&normalized).expect(\"normalized diagnostic should serialize\")"
---
{
  "category": "liveness",
  "code": "K0100",
  "decision": "Want to finish the obligation here?\n  - Call one of these actions: ack, nack, requeue.\n  - Use debt(...) only when cleanup happens somewhere else and you want that visible.",
  "explanation": "I need every path in this scenario to say what happened to the obligation.",
  "line": 8,
  "message": "<temp-path>",
  "notes": [],
  "primary": {
    "byte_end": 174,
    "byte_start": 166,
    "column_end": 24,
    "column_start": 16,
    "file_id": 0,
    "file_path": "<source>",
    "label": "<temp-path>",
    "line_end": 7,
    "line_start": 7
  },
  "related": [],
  "schema_version": 1,
  "secondary": [],
  "severity": "error",
  "slug": "obligation-not-finished",
  "suggestions": [],
  "suppressed_by": null,
  "suppression": null,
  "title": "I expected this obligation to finish",
  "upstream": null
}
