tests/snapshots/k0100_diagnostics/k0100_diagnostics_snapshot_checks__k0106_shrink_safety_diagnostic.snap
---
source: bin/kobo-cli/tests/k0100_diagnostics_snapshot_checks.rs
assertion_line: 37
expression: "serde_json::to_string_pretty(&normalized).expect(\"normalized diagnostic should serialize\")"
---
{
  "code": "K0106",
  "message": "witness shrink is unsafe: replay_checked=false cannot replace an exact witness",
  "shrink": {
    "original_event_count": 9,
    "removed_event_ids": [],
    "replay_checked": false,
    "shrunk_event_count": 9
  }
}
