tests/snapshots/k0100_diagnostics/k0100_diagnostics_snapshot_checks__k0107_boundary_policy_diagnostic.snap
---
source: bin/kobo-cli/tests/k0100_diagnostics_snapshot_checks.rs
assertion_line: 37
expression: "serde_json::to_string_pretty(&normalized).expect(\"normalized diagnostic should serialize\")"
---
{
  "category": "boundary-policy",
  "code": "K0107",
  "decision": "Choose a typed/model policy, record it, wrap it as an activity, or keep this path partial with outside, opaque, or debt before claiming exact replay.",
  "explanation": "External code can perform IO, scheduling, time, randomness, or other effects that Kobo cannot infer from the source alone. The boundary policy says what replay may assume.",
  "line": 3,
  "message": "<temp-path>",
  "notes": [],
  "primary": {
    "byte_end": 96,
    "byte_start": 74,
    "column_end": 34,
    "column_start": 12,
    "file_id": 0,
    "file_path": "<source>",
    "label": "<temp-path>",
    "line_end": 2,
    "line_start": 2
  },
  "related": [],
  "schema_version": 1,
  "secondary": [],
  "severity": "error",
  "slug": "unmodeled-external-boundary",
  "suggestions": [],
  "suppressed_by": null,
  "suppression": null,
  "title": "unmodeled external crate boundary",
  "upstream": null
}
